# thinkpack

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  llms.txt  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  test.yaml
examples/: inference.py  loss_masking.ipynb  training.py
examples/notebooks/: apply_chat.ipynb  loss_masking.ipynb  parse_and_stats.ipynb
examples/scripts/: inference.py  training.py
src/thinkpack/: __init__.py  _cli.py  _model.py  _skill.py  _tags.py  chat.py  cli.py  distill.py  hybrid.py  mask.py  model.py  parse.py  skill.py  stats.py  steer.py
src/thinkpack/data/: __init__.py
study/: README.md  evaluate.py  requirements.txt  train.py
study/config/: evaluate.yaml  train.yaml
study/data/: chemistry_256.jsonl  gsm8k_256.jsonl
tests/: conftest.py  test_chat.py  test_cli.py  test_distill.py  test_hybrid.py  test_mask.py  test_model.py  test_parse.py  test_stats.py  test_steer.py
