# Package specification, as defined here:
# https://packaging.python.org/en/latest/specifications/pyproject-toml/#pyproject-toml-spec

[build-system]
requires = ["setuptools", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "thinkpack"
# version = "0.0.0"
dynamic = ["version"]
description = "A framework for training, parsing, and evaluating explicit reasoning models — focused on reasoning collapse."
readme = "README.md"
authors = [{ name = "Lukas Twist", email = "itsluketwist@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["thinkpack", "llm", "reasoning", "reasoning-collapse", "fine-tuning", "loss-masking"]
requires-python = ">=3.11"

dependencies = [
    "datasets",
    "transformers",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ty",
    "uv",
]

[project.scripts]
thinkpack = "thinkpack._cli:main"

[project.urls]
Homepage = "https://github.com/itsluketwist/thinkpack"

[tool.setuptools.package-data]
"thinkpack.data" = ["llms.txt"]

[tool.uv]
exclude-newer = "7 days"
